# rppi_get

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_msvc.bat  build_ninja.bat  build_ninja_bundled.sh  build_ninja_shared.sh  rppi_config.yaml
.github/workflows/: cmake-multi-platform.yml
src/: alias.hpp  encoding.hpp  git.hpp  json.hpp  rppi_get.cpp  spec.cpp  spec.hpp
